--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         <div class="row text-center">
             <h2>Degrees</h2>
             <hr class="small black" style="border-color:black">
+            <h3>MBA, INSEAD, Fontainebleau</h3>
             <h3>MS in Electrical Engineering, University of Michigan, Ann Arbor</h3>
             <h3>BE in Electronics and Communication, Rashtreeya Vidyalaya College of Engineering</h3>
         </div>
