--- a/justcast.html
+++ b/justcast.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="row">
-        <div id="hoverTime" class="text-center"></div>
+        <div id="hoverTime" class="text-center"><br/></div>
     </div>
     <br>
 
