--- a/justcast.html
+++ b/justcast.html
@@ -82,6 +82,7 @@ var justCastPlayer = new JustCast();
 <script language="javascript">
 var text = window.location.search;
 var videoLink = decodeURIComponent(text.substring(text.indexOf("=")+1, text.length));
+window.history.pushState("", "Title", "/justcast.html");
 </script>
 
 
