--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Bangalore <i class="fa fa-caret-right "></i> Michigan <i class="fa fa-caret-right "></i> San Diego</h2>
+                    <h2>Bangalore <i class="fa fa-caret-right "></i> Michigan <i class="fa fa-caret-right "></i> San Diego <i class="fa fa-caret-right "></i> France <i class="fa fa-caret-right "></i> ?</h2>
 
                 </div>
             </div>
@@ -166,6 +166,8 @@
             <a href="https://www.youtube.com/watch?v=fhRRP8XwCmE" target="_blank"><h3>Michigan Mobile Phone Ensemble Concert</h3></a>
             <a href="http://mopho.eecs.umich.edu/events/sleeper10/DVD-Cover.pdf" target="_blank"><h3>Michigan Mobile Phone Ensemble 2</h3></a>
             <a href="http://www.music.umich.edu/departments/dance/documents/AY1011_DRA_Program.pdf" target="_blank"><h3>Dance and Related Arts Final Project</h3></a>
+            <h3>Independent study project for Google for their SMB market strategy</h3>
+            <h3>Consulting for a growth project for a leading auto insurance provider in Belgium</h3>
         </div>
     </div>
     </section>
