Fix broken links

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     <strong>Certificates</strong>
                                 </h4>
 
-                                <a href="https://drive.google.com/folderview?id=0B30VX8UaWc3JVmRoUzcydXZOSVk&usp=sharing" target="_blank" class="btn btn-light">Click for info</a>
+                                <a href="https://drive.google.com/folderview?id=0B30VX8UaWc3JMU0wcHJma2NEUE0&usp=sharing" target="_blank" class="btn btn-light">Click for info</a>
                             </div>
                         </div>
                     </div>
@@ -164,10 +164,9 @@
             <hr class="small black" style="border-color:black">
             <h3>MBA: Independent study project for Google for their SMB market strategy</h3>
             <h3>MBA: Consulting for a growth project for a leading auto insurance provider in Belgium</h3>
-            <a href="https://drive.google.com/file/d/0B30VX8UaWc3JUDVHMnA0b0VGV1E/view" target="_blank"><h3>MS: AMD design contest</h3></a>
-            <a href="https://drive.google.com/file/d/0B30VX8UaWc3JcVJwb3d2amt1QTg/view" target="_blank"><h3>MS: 1st year project</h3></a>
+            <a href="https://drive.google.com/file/d/0B30VX8UaWc3JcWd3bE41UWpDT2M/view?usp=sharing" target="_blank"><h3>MS: AMD design contest</h3></a>
+            <a href="https://drive.google.com/file/d/0B30VX8UaWc3JZkRaRmJhLUlWYms/view?usp=sharing" target="_blank"><h3>MS: 1st year project</h3></a>
             <a href="https://www.youtube.com/watch?v=fhRRP8XwCmE" target="_blank"><h3>Michigan Mobile Phone Ensemble Concert</h3></a>
-            <a href="http://mopho.eecs.umich.edu/events/sleeper10/DVD-Cover.pdf" target="_blank"><h3>Michigan Mobile Phone Ensemble 2</h3></a>
             <a href="http://www.music.umich.edu/departments/dance/documents/AY1011_DRA_Program.pdf" target="_blank"><h3>Dance and Related Arts Final Project</h3></a>
         </div>
     </div>
