Make some minor text modifications

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Bangalore <i class="fa fa-caret-right "></i> Michigan <i class="fa fa-caret-right "></i> San Diego <i class="fa fa-caret-right "></i> France <i class="fa fa-caret-right "></i> ?</h2>
+                    <h2>India <i class="fa fa-caret-right "></i> USA <i class="fa fa-caret-right "></i> France <i class="fa fa-caret-right "></i> ?</h2>
 
                 </div>
             </div>
@@ -155,14 +155,15 @@
         <div class="row text-center">
             <h2>Degrees</h2>
             <hr class="small black" style="border-color:black">
-            <h3>MBA, INSEAD, Fontainebleau</h3>
-            <h3>MS in Electrical Engineering, University of Michigan, Ann Arbor</h3>
-            <h3>BE in Electronics and Communication, Rashtreeya Vidyalaya College of Engineering</h3>
+            <h3>MBA, INSEAD</h3>
+            <h3>MS, University of Michigan Ann Arbor</h3>
+            <h3>BE, Rashtreeya Vidyalaya College of Engineering</h3>
         </div>
         <div class="row text-center">
             <h2>Projects</h2>
             <hr class="small black" style="border-color:black">
-            <h3>MBA: Independent study project for Google for their SMB market strategy</h3>
+            <h3>MBA: Independent study project for Google SMB market strategy</h3>
+            <h3>MBA: Independent study project for Google Chromecast and Play sales</h3>
             <h3>MBA: Consulting for a growth project for a leading auto insurance provider in Belgium</h3>
             <a href="https://drive.google.com/file/d/0B30VX8UaWc3JcWd3bE41UWpDT2M/view?usp=sharing" target="_blank"><h3>MS: AMD design contest</h3></a>
             <a href="https://drive.google.com/file/d/0B30VX8UaWc3JZkRaRmJhLUlWYms/view?usp=sharing" target="_blank"><h3>MS: 1st year project</h3></a>
@@ -258,16 +259,6 @@
                                     <img class="img-portfolio img-responsive" src="img/kalachakra.png">
                                     <div class="desc">
                                     <p class="desc_content">Indian Classical Arts - Michigan Sahana,2010 (Vocalist)</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="https://www.youtube.com/watch?v=4-yQB6jvfeY" target="_blank">
-                                    <img class="img-portfolio img-responsive" src="img/umix.jpg">
-                                    <div class="desc">
-                                    <p class="desc_content">UMIX,2010 (Dancer)</p>
                                     </div>
                                 </a>
                             </div>
