--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="row text-center">
             <h2>Activities</h2>
             <hr class="small black" style="border-color:black">
-            <a href="https://www.facebook.com/infineoncareer/posts/1460935717511739" target="_blank"><h3>Teaching English with Learn for Life,2009</h3></a>
+            <h3>Teaching English with Learn for Life</h3>
             <h3>Writer for <a href="https://www.youtube.com/watch?v=EJC3gjwp8l4&t=4m37s" target="_blank">movie</a> on Millenium Development Goals screened at Environmental Film Festival,Delhi,2009.</h3>
             <a href="https://www.qualcomm.com/company/sustainability/community/philanthropy" target="_blank"><h3>Volunteer with Qualcomm Cares</h3></a>
         </div>
