--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h2>Activities</h2>
             <hr class="small black" style="border-color:black">
             <h3>Teaching English with Learn for Life</h3>
-            <h3>Writer for <a href="https://www.youtube.com/watch?v=EJC3gjwp8l4&t=4m37s" target="_blank">movie</a> on Millenium Development Goals screened at Environmental Film Festival,Delhi,2009.</h3>
+            <h3>Writer for <a href="https://www.youtube.com/watch?v=EJC3gjwp8l4&t=4m37s" target="_blank">movie</a> on Millenium Development Goals screened at Environmental Film Festival, Delhi</h3>
             <a href="https://www.qualcomm.com/company/sustainability/community/philanthropy" target="_blank"><h3>Volunteer with Qualcomm Cares</h3></a>
         </div>
     </div>
